Fixed UI breaks on dekstop

--- a/src/components/AboutSection/AboutSection.scss
+++ b/src/components/AboutSection/AboutSection.scss
@@ -9,7 +9,11 @@
   height: 867px;
   background-color: rgba(250, 250, 250, 1);
 
-  @include desktop {
+  @include tablet {
+    height: 867px;
+  }
+
+  @include mediumDesktopScreen {
     height: 529px;
   }
 
@@ -20,7 +24,7 @@
     justify-content: flex-start;
     padding: 24px 25px 48px 24px;
 
-    @include desktop {
+    @include mediumDesktopScreen {
       display: flex;
       flex-direction: row;
       justify-content: center;
@@ -31,12 +35,13 @@
 
     .about-us-logo-container {
       padding-bottom: 32px;
+      flex-shrink: 0;
       img {
         width: 102px;
         height: 95px;
       }
 
-      @include desktop {
+      @include mediumDesktopScreen {
         order: 1;
         padding-bottom: 0;
         img {
@@ -53,7 +58,7 @@
       justify-content: flex-start;
       height: 672px;
 
-      @include desktop {
+      @include mediumDesktopScreen {
         order: 0;
         width: 917.78px;
         height: 449px;
@@ -77,7 +82,7 @@
         gap: 16px;
         padding-bottom: 48px;
 
-        @include desktop {
+        @include mediumDesktopScreen {
           display: flex;
           flex-direction: row-reverse;
           justify-content: flex-end;
@@ -99,7 +104,7 @@
             $app-stores-container-horizontal-padding;
           gap: $app-stores-container-gap;
 
-          @include desktop {
+          @include mediumDesktopScreen {
           }
           .apple-icon {
             width: 24px;
@@ -127,7 +132,7 @@
             text-align: center;
             height: 18px;
 
-            @include desktop {
+            @include mediumDesktopScreen {
               font-size: 11.3px;
             }
           }
@@ -155,13 +160,13 @@
         line-height: 35px;
         letter-spacing: 1.25px;
 
-        @include desktop {
+        @include mediumDesktopScreen {
           width: 665px;
           height: 35px;
           font-size: 30px;
           line-height: 35px;
           letter-spacing: 2.140000104904175px;
-          @include desktop {
+          @include mediumDesktopScreen {
             padding-bottom: 0;
           }
         }
@@ -176,7 +181,7 @@
         line-height: 28px;
         letter-spacing: 2.140000104904175px;
 
-        @include desktop {
+        @include mediumDesktopScreen {
           width: 569px;
           height: 330px;
           gap: 32px;
@@ -184,7 +189,7 @@
         .about-us-description-top-text {
           width: 331px;
           height: 255px;
-          @include desktop {
+          @include mediumDesktopScreen {
             width: auto;
             height: auto;
           }
@@ -192,7 +197,7 @@
         .about-us-description-bottom-text {
           width: 306px;
           height: 168px;
-          @include desktop {
+          @include mediumDesktopScreen {
             width: auto;
             height: auto;
           }
